--- a/post3.html
+++ b/post3.html
@@ -92,17 +92,18 @@ If you have a rice cooker, the game is a lot easier. Use the same magic ratio an
                   
                   <!-- Button Bar -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
-                    <div class="btn-group">
+
+                    <div class="btn-group" id="upvote3">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-up"></i>
                       </button>
                     </div>
 
                     <div class="ml-2 mr-2">
-                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted">10 votes</small></p>
+                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count3">7</small><small class="text-muted"> votes</small></p>
                     </div>
 
-                    <div class="btn-group">
+                    <div class="btn-group" id="downvote3">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-down"></i>
                       </button>
@@ -128,6 +129,7 @@ If you have a rice cooker, the game is a lot easier. Use the same magic ratio an
                   </div>
               </div>
 
+              <script src="vote.js"></script>
 
             <!-- Comment Section -->
             <div class="card mb-4">
