--- a/post4.html
+++ b/post4.html
@@ -78,17 +78,18 @@ We are ready to work with the Python.<br>
                  
                   <!-- Button Bar -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
-                    <div class="btn-group">
+
+                    <div class="btn-group" id="upvote4">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-up"></i>
                       </button>
                     </div>
 
                     <div class="ml-2 mr-2">
-                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted">10 votes</small></p>
+                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count4">10</small><small class="text-muted"> votes</small></p>
                     </div>
 
-                    <div class="btn-group">
+                    <div class="btn-group" id="downvote4">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-down"></i>
                       </button>
@@ -113,6 +114,8 @@ We are ready to work with the Python.<br>
                   </div>
                   </div>
               </div>
+
+              <script src="vote.js"></script>
 
             <!-- Comment Section -->
             <div class="card mb-4">
