--- a/post5.html
+++ b/post5.html
@@ -98,22 +98,23 @@
                   
                   <!-- Button Bar -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
-                    <div class="btn-group">
+
+                    <div class="btn-group" id="upvote5">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-up"></i>
                       </button>
                     </div>
 
                     <div class="ml-2 mr-2">
-                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted">10 votes</small></p>
+                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count5">21</small><small class="text-muted"> votes</small></p>
                     </div>
 
-                    <div class="btn-group">
+                    <div class="btn-group" id="downvote5">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-down"></i>
                       </button>
                     </div>
-
+                    
                     <div class="ml-2 mr-2">
                       <p class="mb-0 font-weight-bold text-center"><small class="text-muted">23 comments</small></p>
                     </div>
@@ -134,6 +135,8 @@
                   </div>
                   </div>
               </div>
+
+              <script src="vote.js"></script>
 
 
             <!-- Comment Section -->
