--- a/post.html
+++ b/post.html
@@ -1,4 +1,4 @@
-<!doctype html>
+    <!doctype html>
 <html lang="en">
 <head>
   <title>ExplainMe post0</title>
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -82,7 +82,7 @@
                     </div>
 
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                      <button type="button" class="btn btn-sm btn-outline-secondary" onclick="editButton()">
                         Make Edit
                       </button>
                     </div>
