--- a/post1.html
+++ b/post1.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+<script src="/script.js"></script>
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
@@ -47,8 +47,8 @@
 
               <div class="card mb-4">
                   <div class="card-body">
-                  <h5 class="card-title">How to install Python in Windows?</h5>
-                  <p class="card-text">
+                  <h5 id="post-title" class="card-title">How to install Python in Windows?</h5>
+                  <p id="post-content" class="card-text">
                     PythonServer Side ProgrammingProgramming<br>
                     Python is a widely used high-level programming language. To write and execute code in python, we first need to install Python on our system.<br>
                     <br>
@@ -144,7 +144,7 @@
                     </div>
 
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                      <button type="button" class="btn btn-sm btn-outline-secondary" onclick="editButton()">
                         Make Edit
                       </button>
                     </div>
