--- a/post2.html
+++ b/post2.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+<script src="script.js"></script>
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
@@ -47,8 +47,8 @@
 
               <div class="card mb-4">
                   <div class="card-body">
-                  <h5 class="card-title">Batch Script Tutorial</h5>
-                  <p class="card-text">
+                  <h5 id="post-title" class="card-title">Batch Script Tutorial</h5>
+                  <p id="post-content" class="card-text">
                     Batch Script is incorporated to automate command sequences which are repetitive in nature. Scripting is a way by which one can alleviate this necessity by automating these command sequences in order to make one’s life at the shell easier and more productive. In most organizations, Batch Script is incorporated in some way or the other to automate stuff.<br>
                     <br>
                     Some of the features of Batch Script are −<br>
@@ -115,7 +115,7 @@
                     </div>
 
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                      <button type="button" class="btn btn-sm btn-outline-secondary" onclick="editButton()">
                         Make Edit
                       </button>
                     </div>
