--- a/post4.html
+++ b/post4.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+<script src="/script.js"></script>
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
@@ -47,8 +47,8 @@
 
               <div class="card mb-4">
                   <div class="card-body">
-                  <h5 class="card-title">How to install Python in Windows?</h5>
-                  <p class="card-text">
+                  <h5 id="post-title" class="card-title">How to install Python in Windows?</h5>
+                  <p id="post-content" class="card-text">
                     In order to become Python developer, the first step is to learn how to install or update Python on a local machine or computer. In this tutorial, we will discuss the installation of Python on various operating systems.<br>
                     <br>
 Installation on Windows<br>
@@ -106,7 +106,7 @@ We are ready to work with the Python.<br>
                     </div>
 
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                      <button type="button" class="btn btn-sm btn-outline-secondary" onclick="editButton()">
                         Make Edit
                       </button>
                     </div>
