--- a/post5.html
+++ b/post5.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+<script src="/script.js"></script>card-title
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
@@ -47,8 +47,8 @@
 
               <div class="card mb-4">
                   <div class="card-body">
-                  <h5 class="card-title">Visual Studio Code Shortcuts for Windows</h5>
-                  <p class="card-text">
+                  <h5 id="post-title" class="card-title">Visual Studio Code Shortcuts for Windows</h5>
+                  <p id="post-content" class="card-text">
                     General<br>
                     Ctrl+Shift+P, F1 Show Command Palette<br>
                     Ctrl+P Quick Open, Go to File…<br>
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                      <button type="button" class="btn btn-sm btn-outline-secondary" onclick="editButton()">
                         Make Edit
                       </button>
                     </div>
