Post cards highlight on mouse over

--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -62,7 +62,7 @@
                 </a>
                   <!-- Buttons -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
-                    <div class="btn-group" id="upvote1">
+                    <div class="btn-group upvote" id="upvote1">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-up"></i>
                       </button>
@@ -107,7 +107,7 @@
 
                 <!-- Buttons -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
-                    <div class="btn-group" id="upvote2">
+                    <div class="btn-group upvote" id="upvote2">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-up"></i>
                       </button>
@@ -147,7 +147,7 @@
 
                 <!-- Buttons -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
-                    <div class="btn-group" id="upvote3">
+                    <div class="btn-group upvote" id="upvote3">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-up"></i>
                       </button>
@@ -190,7 +190,7 @@
                   </a>
 
                   <!-- Buttons -->
-                    <div class="btn-group" id="upvote4">
+                    <div class="btn-group upvote" id="upvote4">
                       <button type="button" class="btn btn-sm btn-outline-secondary" onclick="">
                         <i class="fa-arrow-up"></i>
                       </button>
@@ -228,7 +228,7 @@
 
                   <!-- Buttons -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
-                    <div class="btn-group" id="upvote5">
+                    <div class="btn-group upvote" id="upvote5">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-up"></i>
                       </button>
