--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -53,7 +53,7 @@
             
 
             <!-- Post1 -->
-              <div class="card mb-4">
+              <div class="post-card card mb-4">
                 <div class="card-body" id="card-body">
                 <a href="post.html">
                   <h5 id="post-title" class="card-title"></h5>
@@ -88,7 +88,7 @@
               </script>
 
               <!-- Post2 -->
-              <div class="card mb-4">
+              <div class="post-card card mb-4">
                   <div class="card-body">
                   <a href="post2.html">
                   <h5 class="card-title">Batch Script Tutorial</h5>
@@ -126,7 +126,7 @@
               </div>
 
               <!-- Post3 -->
-              <div class="card mb-4">
+              <div class="post-card card mb-4">
                   <div class="card-body">
                   <a href="post3.html">
                   <h5 class="card-title">How to cook Rice</h5>
@@ -167,7 +167,7 @@
               </div>
 
               <!-- Post4 -->
-              <div class="card mb-4">
+              <div class="post-card card mb-4">
                   <div class="card-body">
                   <a href="post4.html">
                   <h5 class="card-title">How to install Python</h5>
@@ -210,7 +210,7 @@
               </div>
 
               <!-- Post5 -->
-              <div class="card mb-4">
+              <div class="post-card card mb-4">
                   <div class="card-body">
                   <a href="post5.html">
                   <h5 class="card-title">Visual Studio Code Shortcuts for Windows</h5>
