Upvote and downvote buttons' colours change to green and red, respectfully

--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -70,7 +70,7 @@
                     <div class="ml-2 mr-2">
                       <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count1">0</small></p>
                     </div>
-                    <div class="btn-group" id="downvote1">
+                    <div class="btn-group downvote" id="downvote1">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-down"></i>
                       </button>
@@ -115,7 +115,7 @@
                     <div class="ml-2 mr-2">
                       <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count2">8</small></p>
                     </div>
-                    <div class="btn-group" id="downvote2">
+                    <div class="btn-group downvote" id="downvote2">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-down"></i>
                       </button>
@@ -155,7 +155,7 @@
                     <div class="ml-2 mr-2">
                       <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count3">7</small></p>
                     </div>
-                    <div class="btn-group" id="downvote3">
+                    <div class="btn-group downvote" id="downvote3">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-down"></i>
                       </button>
@@ -198,7 +198,7 @@
                     <div class="ml-2 mr-2">
                       <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count4">10</small></p>
                     </div>
-                    <div class="btn-group" id="downvote4">
+                    <div class="btn-group downvote" id="downvote4">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-down"></i>
                       </button>
@@ -236,7 +236,7 @@
                     <div class="ml-2 mr-2">
                       <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count5">21</small></p>
                     </div>
-                    <div class="btn-group" id="downvote5">
+                    <div class="btn-group downvote" id="downvote5">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-down"></i>
                       </button>
