Improved version history text

--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -30,7 +30,7 @@
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="submit.html">New Post</a>
+            <a class="nav-link" href="submit.html">New Tutorial</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -72,7 +72,7 @@
                     </div>
                     <div class="btn-group downvote" id="downvote1">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-down"></i>
+                        <i class="fa-solid fa-arrow-down"></i>
                       </button>
                     </div>
 
