--- a/post4.html
+++ b/post4.html
@@ -26,7 +26,7 @@
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="submit.html">New Post</a>
+            <a class="nav-link" href="submit.html">New Tutorial</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -107,7 +107,7 @@ We are ready to work with the Python.<br>
 
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary" onclick="editButton()">
-                        Make Edit
+                        Edit
                       </button>
                     </div>
 
@@ -135,22 +135,21 @@ We are ready to work with the Python.<br>
 
           <!-- Right Section: Sidebar -->
           <div class="col-md-3">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Edits History</h5>
-                <ul>
-                <li><a href="post4.html">04/04/2023</a></li>
-                <li><a href="p4-4.html">28/03/2023</a></li>
-                <li><a href="p4-3.html">14/03/2023</a></li>
-                <li><a href="p4-2.html">25/02/2023</a></li>
-                <li><a href="p4-1.html">22/02/2023</a></li>
-                <li><a href="p4-0.html">03/02/2023</a></li>
-              </ul>
+              <div class="card">
+                  <div class="card-body">
+                      <h5 class="card-title">Edits History</h5>
+                      <ul>
+                          <li>04/04/2023 <small class="text-muted">Versao 6</small></li>
+                          <li>28/03/2023 <small class="text-muted">Versao 5</small></li>
+                          <li>14/03/2023 <small class="text-muted">Versao 4</small></li>
+                          <li>25/02/2023 <small class="text-muted">Versao 3</small></li>
+                          <li>22/02/2023 <small class="text-muted">Versao 2</small></li>
+                          <li>03/02/2023 <small class="text-muted">Versao 1</small></li>
+                      </ul>
+                  </div>
               </div>
-            </div>
           </div>
 
-          
 
       </div>
       </div>
