--- a/post5.html
+++ b/post5.html
@@ -26,7 +26,7 @@
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="submit.html">New Post</a>
+            <a class="nav-link" href="submit.html">New Tutorial</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -127,7 +127,7 @@
 
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary" onclick="editButton()">
-                        Make Edit
+                        Edit
                       </button>
                     </div>
 
@@ -155,22 +155,22 @@
 
           </div>
 
-          <!-- Right Section: Sidebar -->
-          <div class="col-md-3">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Edits History</h5>
-                <ul>
-                <li>04/04/2023</li>
-                <li>28/03/2023</li>
-                <li>14/03/2023</li>
-                <li>25/02/2023</li>
-                <li>22/02/2023</li>
-                <li>03/02/2023</li>
+        <!-- Right Section: Sidebar -->
+        <div class="col-md-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Edits History</h5>
+              <ul>
+                <li>04/04/2023 <small class="text-muted">Versao 6</small></li>
+                <li>28/03/2023 <small class="text-muted">Versao 5</small></li>
+                <li>14/03/2023 <small class="text-muted">Versao 4</small></li>
+                <li>25/02/2023 <small class="text-muted">Versao 3</small></li>
+                <li>22/02/2023 <small class="text-muted">Versao 2</small></li>
+                <li>03/02/2023 <small class="text-muted">Versao 1</small></li>
               </ul>
-              </div>
             </div>
           </div>
+        </div>
 
           
 
