--- a/post.html
+++ b/post.html
@@ -22,12 +22,12 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <form class="d-flex mx-auto">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 400px">
-        </form>
+          <form class="d-flex mx-auto">
+              <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" style="width: 400px" id="myInput" onkeyup="filter()">
+          </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="submit.html">New Post</a>
+            <a class="nav-link" href="submit.html">New Tutorial</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -55,8 +55,8 @@
                   
                   <!-- Button Bar -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                    <div class="btn-group upvote">
+                      <button type="button" id="upvote1" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-up"></i>
                       </button>
                     </div>
@@ -65,8 +65,8 @@
                       <p class="mb-0 font-weight-bold text-center"><small class="text-muted">0 votes</small></p>
                     </div>
 
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
+                    <div class="btn-group downvote">
+                      <button type="button" id="downvote1" class="btn btn-sm btn-outline-secondary">
                         <i class="fa-arrow-down"></i>
                       </button>
                     </div>
@@ -83,7 +83,7 @@
 
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary" onclick="editButton()">
-                        Make Edit
+                        Edit
                       </button>
                     </div>
 
