--- a/submit.html
+++ b/submit.html
@@ -26,7 +26,7 @@
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="submit.html">New Post</a>
+            <a class="nav-link" href="submit.html">New Tutorial</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -44,7 +44,7 @@
   <div class="container mt-4">
     <div class="card">
       <div class="card-header">
-        <h5 class="mb-0">New Post</h5>
+        <h5 class="mb-0">New Tutorial</h5>
       </div>
       <div class="card-body">
         <form onsubmit="submitForm(event)">
