--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -7,7 +7,7 @@
   
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="static/css/font-awesome.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Custom -->
   <link rel="stylesheet" type="text/css" href="static/css/main.css">
@@ -21,6 +21,18 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="ExplainMe.html">ExplainMe</a>
+      
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Category
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Computer</a>
+          <a class="dropdown-item" href="#">Coocking</a>
+          <a class="dropdown-item" href="#">Arts</a>
+        </div>
+      </div>
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -64,7 +76,7 @@
                   <div class="d-flex flex-row justify-content-start align-items-center">
                     <div class="btn-group upvote" id="upvote1">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-up"></i>
+                        <i class="fa fa-arrow-up"></i>
                       </button>
                     </div>
                     <div class="ml-2 mr-2">
@@ -72,7 +84,7 @@
                     </div>
                     <div class="btn-group downvote" id="downvote1">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-solid fa-arrow-down"></i>
+                        <i class="fa fa-arrow-down"></i>
                       </button>
                     </div>
 
@@ -109,7 +121,7 @@
                   <div class="d-flex flex-row justify-content-start align-items-center">
                     <div class="btn-group upvote" id="upvote2">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-up"></i>
+                        <i class="fa fa-arrow-up"></i>
                       </button>
                     </div>
                     <div class="ml-2 mr-2">
@@ -117,7 +129,7 @@
                     </div>
                     <div class="btn-group downvote" id="downvote2">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-down"></i>
+                        <i class="fa fa-arrow-down"></i>
                       </button>
                     </div>
 
@@ -149,7 +161,7 @@
                   <div class="d-flex flex-row justify-content-start align-items-center">
                     <div class="btn-group upvote" id="upvote3">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-up"></i>
+                        <i class="fa fa-arrow-up"></i>
                       </button>
                     </div>
                     <div class="ml-2 mr-2">
@@ -157,7 +169,7 @@
                     </div>
                     <div class="btn-group downvote" id="downvote3">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-down"></i>
+                        <i class="fa fa-arrow-down"></i>
                       </button>
                     </div>
 
@@ -192,7 +204,7 @@
                   <!-- Buttons -->
                     <div class="btn-group upvote" id="upvote4">
                       <button type="button" class="btn btn-sm btn-outline-secondary" onclick="">
-                        <i class="fa-arrow-up"></i>
+                        <i class="fa fa-arrow-up"></i>
                       </button>
                     </div>
                     <div class="ml-2 mr-2">
@@ -200,7 +212,7 @@
                     </div>
                     <div class="btn-group downvote" id="downvote4">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-down"></i>
+                        <i class="fa fa-arrow-down"></i>
                       </button>
                     </div>
 
@@ -230,7 +242,7 @@
                   <div class="d-flex flex-row justify-content-start align-items-center">
                     <div class="btn-group upvote" id="upvote5">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-up"></i>
+                        <i class="fa fa-arrow-up"></i>
                       </button>
                     </div>
                     <div class="ml-2 mr-2">
@@ -238,7 +250,7 @@
                     </div>
                     <div class="btn-group downvote" id="downvote5">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-down"></i>
+                        <i class="fa fa-arrow-down"></i>
                       </button>
                     </div>
 
