--- a/p4-1.html
+++ b/p4-1.html
@@ -7,7 +7,7 @@
   
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="static/css/font-awesome.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="static/css/main.css">
 </head>
 
@@ -17,6 +17,18 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="ExplainMe.html">ExplainMe</a>
+      
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Category
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Computer</a>
+          <a class="dropdown-item" href="#">Coocking</a>
+          <a class="dropdown-item" href="#">Arts</a>
+        </div>
+      </div>
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -59,7 +71,7 @@
                   <div class="d-flex flex-row justify-content-start align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-up"></i>
+                        <i class="fa fa-arrow-up"></i>
                       </button>
                     </div>
 
@@ -69,7 +81,7 @@
 
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">
-                        <i class="fa-arrow-down"></i>
+                        <i class="fa fa-arrow-down"></i>
                       </button>
                     </div>
 
