--- a/post1.html
+++ b/post1.html
@@ -59,6 +59,7 @@
 
               <div class="card mb-4">
                   <div class="card-body">
+                  <p class="date">01/05/2022</p>
                   <h5 id="post-title" class="card-title">How to install Python in Windows?</h5>
                   <p id="post-content" class="card-text">
                     PythonServer Side ProgrammingProgramming<br>
