--- a/post2.html
+++ b/post2.html
@@ -59,6 +59,7 @@
 
               <div class="card mb-4">
                   <div class="card-body">
+                  <p class="date">01/05/2022</p>
                   <h5 id="post-title" class="card-title">Batch Script Tutorial</h5>
                   <p id="post-content" class="card-text">
                     Batch Script is incorporated to automate command sequences which are repetitive in nature. Scripting is a way by which one can alleviate this necessity by automating these command sequences in order to make one’s life at the shell easier and more productive. In most organizations, Batch Script is incorporated in some way or the other to automate stuff.<br>
@@ -94,7 +95,7 @@
                     :: @ECHO OFF<br>
                     DEL . DR<br>
                     <br>
-                    </p>
+                  </p>
                   <p class="card-text"><small class="text-muted">Submitted by John Doe on 2022-05-01</small></p>
                   
                     <!-- Button Bar -->
