--- a/post3.html
+++ b/post3.html
@@ -59,6 +59,7 @@
 
               <div class="card mb-4">
                   <div class="card-body">
+                  <p class="date">01/05/2022</p>
                   <h5 id="post-title" class="card-title">How To Cook Rice</h5>
                   <p id="post-content" class="card-text">
                     Just can't master the art of cooking rice on the stovetop? No stress—you're not alone. Many things can go wrong when prepping rice: too gummy, too hard, burnt. But, once you've got it down, it's simple to get it right every time. Before you know it, you'll have a steaming bowl of rice ready to be made into our easy Buddha bowls or topped with beef and broccoli for the easiest weeknight dinner. <br>
