--- a/post4.html
+++ b/post4.html
@@ -59,6 +59,7 @@
 
               <div class="card mb-4">
                   <div class="card-body">
+                  <p class="date">01/05/2022</p>
                   <h5 id="post-title" class="card-title">How to install Python in Windows?</h5>
                   <p id="post-content" class="card-text">
                     In order to become Python developer, the first step is to learn how to install or update Python on a local machine or computer. In this tutorial, we will discuss the installation of Python on various operating systems.<br>
