--- a/post.html
+++ b/post.html
@@ -9,11 +9,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="static/css/font-awesome.css">
   <link rel="stylesheet" type="text/css" href="static/css/main.css">
+
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 
 <body>
   <script src="/script.js"></script>
-
+  <script src="/posts.js"></script>
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
@@ -51,7 +53,10 @@
                   <h5 id="post-title" class="card-title"></h5>
                   <p id="post-content" class="card-text">                                   
                   </p>
-                  <p class="card-text"><small class="text-muted">Submitted by Guilherme Casal on 2022-05-11</small></p>
+                  <p class="card-text"> <small class="text-muted">Submitted by </small>
+                                        <small id="author" class="text-muted">Guilherme Casal</small>
+                                        <small class="text-muted"> on </small>
+                                        <small id="date" class="text-muted">2022-05-11</small></p>
                   
                   <!-- Button Bar -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
@@ -62,7 +67,9 @@
                     </div>
 
                     <div class="ml-2 mr-2">
-                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted">0 votes</small></p>
+                      <p class="mb-0 font-weight-bold text-center">
+                          <small id="score" class="text-muted"></small>
+                          <small class="text-muted"> votes</small></p>
                     </div>
 
                     <div class="btn-group downvote">
@@ -114,9 +121,9 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Edits History</h5>
-                <ul>
+                <ul id="edit-history">
                 
-              </ul>
+                </ul>
               </div>
             </div>
           </div>
