--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -8,6 +8,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
   <!-- Custom -->
   <link rel="stylesheet" type="text/css" href="static/css/main.css">
@@ -16,7 +17,7 @@
 
 <body>
   <script src="script.js"></script>
-
+  <script src="homepage.js"></script>
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
@@ -42,7 +43,7 @@
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="submit.html">New Tutorial</a>
+            <a class="nav-link" onclick="newTutorialButton()">New Tutorial</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
