--- a/submit.html
+++ b/submit.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="script.js"></script>
+  <script src="submit.js"></script>
 
   <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -38,7 +40,7 @@
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="submit.html">New Tutorial</a>
+            <a class="nav-link" onclick="newTutorialButton()">New Tutorial</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -59,7 +61,7 @@
         <h5 class="mb-0">New Tutorial</h5>
       </div>
       <div class="card-body">
-        <form onsubmit="submitForm(event)">
+        <form class="form">
 
           <div class="mb-3">
             <label for="title" class="form-label">Title</label>
