--- a/post.html
+++ b/post.html
@@ -95,17 +95,19 @@
                       <p class="mb-0 font-weight-bold text-center"><small class="text-muted">0 comments</small></p>
                     </div>
 
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">
-                        Share
-                      </button>
-                    </div>
-
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary" onclick="editButton()">
-                        Edit
-                      </button>
-                    </div>
+                    <div class="ml-auto">
+                      <div class="btn-group">
+                          <button type="button" class="btn btn-sm btn-outline-primary">
+                              Share
+                          </button>
+                      </div>
+              
+                      <div class="btn-group">
+                          <button type="button" class="btn btn-sm btn-outline-success" onclick="editButton()">
+                              Edit
+                          </button>
+                      </div>
+                  </div>
 
 
                   </div>
