--- a/post1.html
+++ b/post1.html
@@ -18,17 +18,6 @@
     <div class="container">
       <a class="navbar-brand" href="ExplainMe.html">ExplainMe</a>
       
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Category
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Computer</a>
-          <a class="dropdown-item" href="#">Coocking</a>
-          <a class="dropdown-item" href="#">Arts</a>
-        </div>
-      </div>
-      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -197,12 +186,12 @@
                   </select>
                 </div>
                 <ul id="history-list">
-                  <li>04/04/2023</li>
-                  <li>28/03/2023</li>
-                  <li>14/03/2023</li>
-                  <li>25/02/2023</li>
-                  <li>22/02/2023</li>
-                  <li>03/02/2023</li>
+                  <li>04/04/2023 <small class="text-muted">Version 6</small></li> 
+                  <li>28/03/2023 <small class="text-muted">Version 5</small></li> 
+                  <li>14/03/2023 <small class="text-muted">Version 4</small></li>
+                  <li>25/02/2023 <small class="text-muted">Version 3</small></li>
+                  <li>22/02/2023 <small class="text-muted">Version 2</small></li>
+                  <li>03/02/2023 <small class="text-muted">Version 1</small></li>
                 </ul>
               </div>
             </div>
