--- a/post11.html
+++ b/post11.html
@@ -48,10 +48,10 @@
 
               <div class="card mb-4">
                   <div class="card-body">
-                    <p class="date">08/15/2023</p>
+                    <p class="date">15/08/2023</p>
                     <h5 id="post-title" class="card-title">Java Programming: Getting Started with the Basics</h5>
                     <p id="post-content" class="card-text">
-                      Introduction:
+                      Introduction:<br>
                       In this tutorial, we'll dive into the world of Java programming and explore the basics of this popular programming language. Java is known for its versatility and is widely used for developing desktop, web, and mobile applications. Whether you're a beginner or have some programming experience, this tutorial will guide you through the essential concepts and syntax of Java programming.<br>
                       <br>
                       Topics Covered:<br>
@@ -99,7 +99,7 @@
                       <br>
                       Conclusion:<br>
                       Congratulations! You've taken the first steps in Java programming by mastering the basics. Keep practicing and exploring more advanced concepts to become a proficient Java developer. <br>
-                    
+                      <p class="card-text"><small class="text-muted">Submitted by Albert Pattinson on 2023-08-15</small></p>
                   
                   <!-- Button Bar -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
