--- a/post12.html
+++ b/post12.html
@@ -51,7 +51,7 @@
                     <p class="date">10/03/2023</p>
                     <h5 id="post-title" class="card-title">Mastering Sorting Algorithms: A Comprehensive Guide</h5>
                     <p id="post-content" class="card-text">
-                      Introduction:
+                      Introduction:<br>
                       In this tutorial, we'll dive into the world of sorting algorithms and explore the different techniques used to efficiently sort data. Sorting algorithms play a crucial role in computer science and are used to arrange elements in a specific order. Whether you're a beginner or have some programming experience, this comprehensive guide will introduce you to various sorting algorithms and help you understand their strengths and weaknesses.<br>
                       <br>
                       Topics Covered:<br>
@@ -98,7 +98,8 @@
                       Compare the different sorting algorithms based on their time complexity, stability, and space complexity. Understand how to choose the right sorting algorithm for different scenarios and datasets.<br>
                       <br>
                       Conclusion:<br>
-                      Congratulations! You've learned about various sorting algorithms and their characteristics. Keep practicing and experimenting with different algorithms to enhance your understanding and problem-solving skills in the world of sorting.
+                      Congratulations! You've learned about various sorting algorithms and their characteristics. Keep practicing and experimenting with different algorithms to enhance your understanding and problem-solving skills in the world of sorting.<br>
+                      <p class="card-text"><small class="text-muted">Submitted by Karen Wilson on 2023-03-10</small></p>
                     
                   
                   <!-- Button Bar -->
