--- a/post7.html
+++ b/post7.html
@@ -51,7 +51,7 @@
                     <p class="date">09/28/2022</p>
                     <h5 id="post-title" class="card-title">The Perfect Homemade Pizza: From Dough to Toppings</h5>
                     <p id="post-content" class="card-text">
-                      Introduction:
+                      Introduction:<br>
                       In this tutorial, we'll dive into the delicious world of homemade pizza and learn how to create the perfect pizza from scratch. Making pizza at home allows you to customize the dough, sauce, and toppings to your liking. Whether you're a beginner or an experienced cook, this tutorial will guide you through the process of making a mouthwatering homemade pizza that will rival your favorite pizzerias.<br>
                       <br>
                       Ingredients:<br>
