--- a/post9.html
+++ b/post9.html
@@ -51,7 +51,7 @@
                     <p class="date">06/15/2022</p>
                     <h5 id="post-title" class="card-title">Mastering Pen and Ink: Creating Intricate Illustrations</h5>
                     <p id="post-content" class="card-text">
-                      Introduction:
+                      Introduction:<br>
                       In this tutorial, we'll dive into the fascinating world of pen and ink illustrations and learn how to create intricate and detailed artworks. Pen and ink is a versatile medium that allows for precise lines and intricate textures, making it perfect for capturing intricate details in drawings. Whether you're a beginner or an experienced artist, this tutorial will guide you through the process of mastering pen and ink techniques and creating stunning illustrations.<br>
                       <br>
                       Materials Needed:<br>
