--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -26,10 +26,10 @@
       <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" onclick="myFunction()">Category</button>
         <div id="myDropdown" class="dropdown-content">
-          <a href="#informatic">Informatic</a>
-          <a href="#cooking">Coocking</a>
-          <a href="#arts">Arts</a>
-          <a href="#bricolage">Bricolage</a>  
+          <a href="Informatic.html">Informatic</a>
+          <a href="Cooking.html">Coocking</a>
+          <a href="Arts.html">Arts</a>
+          <a href="Bricolage.html">Bricolage</a>  
         </div>
       </div>
       
@@ -265,12 +265,25 @@
               
 
             <!-- Post6 -->
-            <div class="post-card card mb-4" id="cooking">
+            <div class="post-card card mb-4" id="art">
               <div class="card-body">
               <a href="post6.html">
-              <h5 class="card-title">Art</h5>
-              <p id="demo" class="card-text fixed-size"></p>
-              <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
+              <h5 class="card-title">Creating a Stunning Watercolor Landscape Painting</h5>
+              <p class="card-text fixed-size">
+                Introduction:<br>
+                In this tutorial, we'll explore the beautiful world of watercolor painting and create a stunning landscape artwork. Watercolor is a versatile and expressive medium that can capture the essence of nature in a unique way. Whether you're a beginner or an experienced artist, this tutorial will guide you through the process of creating a vibrant and captivating landscape painting.<br>
+                <br>
+                Materials Needed:<br>
+                <br>
+                Watercolor paints (various colors)<br>
+                Watercolor paper (preferably cold-pressed)<br>
+                Watercolor brushes (a variety of sizes)<br>
+                Water container<br>
+                Paper towels<br>
+                Palette or mixing tray<br>
+                Step 1: Gathering Inspiration<br>
+              </p>
+              <p class="card-text"><small class="text-muted">Submitted by John Doe on 2022-05-01</small></p>
             </a>
 
             <!-- Buttons -->
@@ -299,9 +312,23 @@
           <div class="post-card card mb-4" id="cooking">
             <div class="card-body">
             <a href="post7.html">
-            <h5 class="card-title">Cook</h5>
-            <p id="demo" class="card-text fixed-size"></p>
-            <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
+            <h5 class="card-title">The Perfect Homemade Pizza: From Dough to Toppings</h5>
+            <p id="demo" class="card-text fixed-size">
+              Introduction:<br>
+              In this tutorial, we'll dive into the delicious world of homemade pizza and learn how to create the perfect pizza from scratch. Making pizza at home allows you to customize the dough, sauce, and toppings to your liking. Whether you're a beginner or an experienced cook, this tutorial will guide you through the process of making a mouthwatering homemade pizza that will rival your favorite pizzerias.<br>
+              <br>
+              Ingredients:<br>
+              <br>
+              For the Dough:<br>
+              - 2 ¼ cups all-purpose flour<br>
+              - 1 teaspoon instant yeast<br>
+              - 1 teaspoon sugar<br>
+              - 1 teaspoon salt<br>
+              - ¾ cup warm water<br>
+              - 2 tablespoons olive oil<br>
+              <br>
+            </p>
+            <p class="card-text"><small class="text-muted">Submitted by Mark Johnson on 2022-09-28</small></p>
           </a>
 
           <!-- Buttons -->
@@ -328,9 +355,24 @@
         <div class="post-card card mb-4" id="cooking">
           <div class="card-body">
           <a href="post8.html">
-          <h5 class="card-title">Cook</h5>
-          <p id="demo" class="card-text fixed-size"></p>
-          <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
+          <h5 class="card-title">Flavorful Stir-Fried Noodles: A Quick and Delicious Meal</h5>
+          <p id="demo" class="card-text fixed-size">
+            Introduction:<br>
+            In this tutorial, we'll explore the wonderful world of stir-fried noodles and learn how to create a flavorful and satisfying meal in no time. Stir-fried noodles are a versatile dish that can be customized with your favorite vegetables, proteins, and sauces. Whether you're a busy student or a cooking enthusiast, this tutorial will guide you through the process of making delicious stir-fried noodles that will impress your taste buds.<br>
+            <br>
+            Ingredients:<br>
+            <br>
+            - 8 ounces of noodles (such as egg noodles, rice noodles, or soba noodles)<br>
+            - 2 tablespoons vegetable oil<br>
+            - 2 cloves of garlic, minced<br>
+            - 1 small onion, thinly sliced<br>
+            - Your choice of vegetables (such as bell peppers, carrots, broccoli, or snap peas)<br>
+            - Your choice of protein (such as chicken, beef, shrimp, or tofu)<br>
+            - 2 tablespoons soy sauce<br>
+            - 1 tablespoon oyster sauce (optional)<br>
+            - 1 tablespoon fish sauce (optional)<br>
+          </p>
+          <p class="card-text"><small class="text-muted">Submitted by Robert Patt on 2022-07-15</small></p>
         </a>
 
         <!-- Buttons -->
@@ -354,12 +396,22 @@
         </div>
 
         <!-- Post9 -->
-        <div class="post-card card mb-4" id="cooking">
+        <div class="post-card card mb-4" id="art">
           <div class="card-body">
           <a href="post6.html">
-          <h5 class="card-title">Arts</h5>
-          <p id="demo" class="card-text fixed-size"></p>
-          <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
+          <h5 class="card-title">Mastering Pen and Ink: Creating Intricate Illustrations</h5>
+          <p id="demo" class="card-text fixed-size">
+            Introduction:<br>
+            In this tutorial, we'll dive into the fascinating world of pen and ink illustrations and learn how to create intricate and detailed artworks. Pen and ink is a versatile medium that allows for precise lines and intricate textures, making it perfect for capturing intricate details in drawings. Whether you're a beginner or an experienced artist, this tutorial will guide you through the process of mastering pen and ink techniques and creating stunning illustrations.<br>
+            <br>
+            Materials Needed:<br>
+            <br>
+            - Drawing pens (varying nib sizes, such as fine, medium, and bold)<br>
+            - Drawing paper (preferably smooth and heavyweight)<br>
+            - Pencil and eraser<br>
+            - Reference images or objects<br>
+          </p>
+          <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-06-15</small></p>
         </a>
 
         <!-- Buttons -->
@@ -383,12 +435,24 @@
         </div>
 
         <!-- Post10 -->
-        <div class="post-card card mb-4" id="cooking">
+        <div class="post-card card mb-4" id="bricolge">
           <div class="card-body">
           <a href="post10.html">
-          <h5 class="card-title">Cook</h5>
-          <p id="demo" class="card-text fixed-size"></p>
-          <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
+          <h5 class="card-title">Mastering Bricolage: Creative DIY Projects for Home Decor</h5>
+          <p id="demo" class="card-text fixed-size">
+            Introduction:<br>
+            In this tutorial, we'll delve into the world of bricolage and explore creative DIY projects for home decor. Bricolage is the art of making something new and unique by repurposing or combining existing materials. With bricolage, you can transform everyday objects into stunning pieces that reflect your personal style. Whether you're a craft enthusiast or a beginner, this tutorial will guide you through the process of mastering bricolage and creating beautiful home decor pieces.<br>
+            <br>
+            Materials Needed:<br>
+            <br>
+            - Various materials for repurposing (such as old furniture, fabric scraps, glass bottles, or vintage items)<br>
+            - Basic tools (such as screwdrivers, hammers, glue guns, and paintbrushes)<br>
+            - Paints, stains, or varnishes<br>
+            - Decorative elements (such as beads, ribbons, buttons, or trims)<br>
+            - Safety equipment (such as gloves and goggles)<br>
+            <br>
+          </p>
+          <p class="card-text"><small class="text-muted">Submitted by Mike Rogers on 03/17/2023</small></p>
         </a>
 
         <!-- Buttons -->
@@ -415,9 +479,22 @@
         <div class="post-card card mb-4" id="cooking">
           <div class="card-body">
           <a href="post11.html">
-          <h5 class="card-title">Java</h5>
-          <p id="demo" class="card-text fixed-size"></p>
-          <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
+          <h5 class="card-title">Java Programming: Getting Started with the Basics</h5>
+          <p id="demo" class="card-text fixed-size">
+            Introduction:
+            In this tutorial, we'll dive into the world of Java programming and explore the basics of this popular programming language. Java is known for its versatility and is widely used for developing desktop, web, and mobile applications. Whether you're a beginner or have some programming experience, this tutorial will guide you through the essential concepts and syntax of Java programming.<br>
+            <br>
+            Topics Covered:<br>
+            <br>
+            1. Installing and setting up Java Development Kit (JDK)<br>
+            2. Understanding variables, data types, and operators in Java<br>
+            3. Working with control flow statements (if-else, loops)<br>
+            4. Introduction to object-oriented programming (classes, objects, methods)<br>
+            5. Handling user input and displaying output<br>
+            6. Introduction to arrays and collections<br>
+            7. Exception handling and error management<br>
+          </p>
+          <p class="card-text"><small class="text-muted">Submitted by Albert Pattinson on 08/15/2023</small></p>
         </a>
 
         <!-- Buttons -->
@@ -441,11 +518,24 @@
         </div>
 
         <!-- Post12 -->
-        <div class="post-card card mb-4" id="cooking">
+        <div class="post-card card mb-4" id="Computer">
           <div class="card-body">
           <a href="post12.html">
-          <h5 class="card-title">Sorting</h5>
-          <p id="demo" class="card-text fixed-size"></p>
+          <h5 class="card-title">Mastering Sorting Algorithms: A Comprehensive Guide</h5>
+          <p id="demo" class="card-text fixed-size">
+            Introduction:<br>
+              In this tutorial, we'll dive into the world of sorting algorithms and explore the different techniques used to efficiently sort data. Sorting algorithms play a crucial role in computer science and are used to arrange elements in a specific order. Whether you're a beginner or have some programming experience, this comprehensive guide will introduce you to various sorting algorithms and help you understand their strengths and weaknesses.<br>
+              <br>
+              Topics Covered:<br>
+              <br>
+              1. What are sorting algorithms and why are they important?<br>
+              2. Understanding algorithm complexity and Big O notation<br>
+              3. The bubble sort algorithm<br>
+              4. The insertion sort algorithm<br>
+              5. The selection sort algorithm<br>
+              6. The merge sort algorithm<br>
+              7. The quicksort algorithm<br>
+          </p>
           <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2022-04-30</small></p>
         </a>
 
@@ -468,11 +558,6 @@
           </div>
           </div>
         </div>
-
-
-
-
-
 
 
 
