--- a/post10.html
+++ b/post10.html
@@ -48,10 +48,10 @@
 
               <div class="card mb-4">
                   <div class="card-body">
-                    <p class="date">03/17/2023</p>
+                    <p class="date">17/03/2023</p>
                     <h5 id="post-title" class="card-title">Mastering Bricolage: Creative DIY Projects for Home Decor</h5>
                     <p id="post-content" class="card-text">
-                      Introduction:
+                      Introduction:<br>
                       In this tutorial, we'll delve into the world of bricolage and explore creative DIY projects for home decor. Bricolage is the art of making something new and unique by repurposing or combining existing materials. With bricolage, you can transform everyday objects into stunning pieces that reflect your personal style. Whether you're a craft enthusiast or a beginner, this tutorial will guide you through the process of mastering bricolage and creating beautiful home decor pieces.<br>
                       <br>
                       Materials Needed:<br>
@@ -84,7 +84,8 @@
                       Step back and assess your bricolage creation. Make any final adjustments, touch up paint or finishes, and ensure that all elements are securely attached. Pay attention to details and strive for a polished and cohesive result.<br>
                       <br>
                       Conclusion:<br>
-                      Congratulations! You've mastered bricolage and created a stunning home decor piece. Bricolage allows you to unleash your creativity and give
+                      Congratulations! You've mastered bricolage and created a stunning home decor piece. Bricolage allows you to unleash your creativity<br>
+                      <p class="card-text"><small class="text-muted">Submitted by Mike Rogers on 2023-3-17</small></p>
                     
                   
                   <!-- Button Bar -->
@@ -162,7 +163,7 @@
                 </select>
               </div>
               <ul id="history-list">
-                <li>03/17/2023</li>
+                <li>17/03/2023</li>
               </ul>
             </div>
           </div>
