--- a/post8.html
+++ b/post8.html
@@ -51,7 +51,7 @@
                     <p class="date">11/12/2022</p>
                     <h5 id="post-title" class="card-title">Flavorful Stir-Fried Noodles: A Quick and Delicious Meal</h5>
                     <p id="post-content" class="card-text">
-                      Introduction:
+                      Introduction:<br>
                       In this tutorial, we'll explore the wonderful world of stir-fried noodles and learn how to create a flavorful and satisfying meal in no time. Stir-fried noodles are a versatile dish that can be customized with your favorite vegetables, proteins, and sauces. Whether you're a busy student or a cooking enthusiast, this tutorial will guide you through the process of making delicious stir-fried noodles that will impress your taste buds.<br>
                       <br>
                       Ingredients:<br>
@@ -87,7 +87,8 @@
                       Remove the pan from the heat and garnish the stir-fried noodles with fresh cilantro or green onions, if desired. Give it a final toss to incorporate the garnish. Transfer the noodles to serving plates or bowls and enjoy them while they're hot.<br>
                       <br>
                       Conclusion:<br>
-                      Congratulations! You've successfully made a delicious stir-fried noodles dish. Feel free to experiment with different vegetables, proteins, and sauces to create your own unique flavor combinations. Stir-fried noodles are a quick and satisfying meal that can be enjoyed
+                      Congratulations! You've successfully made a delicious stir-fried noodles dish. Feel free to experiment with different vegetables, proteins, and sauces to create your own unique flavor combinations. Stir-fried noodles are a quick and satisfying meal that can be enjoyed<br>
+                      <p class="card-text"><small class="text-muted">Submitted by Robert Patt on 2022-12-11</small></p>
                     
                   
                   <!-- Button Bar -->
