--- a/post3.html
+++ b/post3.html
@@ -48,7 +48,7 @@
 
               <div class="card mb-4">
                   <div class="card-body">
-                  <p class="date">01/05/2022</p>
+                  <p class="date">02/06/2022</p>
                   <h5 id="post-title" class="card-title">How To Cook Rice</h5>
                   <p id="post-content" class="card-text">
                     Just can't master the art of cooking rice on the stovetop? No stress—you're not alone. Many things can go wrong when prepping rice: too gummy, too hard, burnt. But, once you've got it down, it's simple to get it right every time. Before you know it, you'll have a steaming bowl of rice ready to be made into our easy Buddha bowls or topped with beef and broccoli for the easiest weeknight dinner. <br>
@@ -90,7 +90,7 @@
                     If you have a rice cooker, the game is a lot easier. Use the same magic ratio and throw everything into the rice cooker, which does all the work for you. When the machine says it's ready, the same "leave it alone" and fluffing instructions apply.  <br>
                                       
                     </p>
-                  <p class="card-text"><small class="text-muted">Submitted by John Doe on 2022-05-01</small></p>
+                  <p class="card-text"><small class="text-muted">Submitted by Marie Alas on 2022-06-02</small></p>
                   
                   <!-- Button Bar -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
