--- a/submit.html
+++ b/submit.html
@@ -71,12 +71,19 @@
             </select>
           </div>
 
+          <div class="mb-3">
+            <label for="images" class="form-label">Images</label>
+            <input type="file" class="form-control-file" id="images" name="images" accept="image/*" multiple>
+          </div>
+
 
           <div class="mb-3">
             <label for="content" class="form-label">Content</label>
             <textarea 
-            class="form-control" id="content" name="content" rows="6" required></textarea>
+            class="form-control" id="content" name="content" rows="25" required></textarea>
           </div>
+
+          
 
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
