--- a/ExplainMe.html
+++ b/ExplainMe.html
@@ -559,6 +559,46 @@
           </div>
         </div>
 
+        <!-- Post12 -->
+        <div class="post-card card mb-4">
+          <div class="card-body">
+          <a href="post13.html">
+          <h5 class="card-title">How to install Python in Windows?</h5>
+          <p id="demo" class="card-text fixed-size">
+            PythonServer Side ProgrammingProgramming<br>
+            Python is a widely used high-level programming language. To write and execute code in python, we first need to install Python on our system.<br>
+            <br>
+            Installing Python on Windows takes a series of few easy steps.<br>
+            <br>
+            Step 1 − Select Version of Python to Install<br>
+            Python has various versions available with differences between the syntax and working of different versions of the language. We need to choose the version which we want to use or need. There are different versions of Python 2 and Python 3 available.<br>
+            <br>
+            Step 2 − Download Python Executable Installer<br>
+          </p>
+          <p class="card-text"><small class="text-muted">Submitted by Jane Smith on 2023-05-21</small></p>
+        </a>
+
+
+        <!-- Buttons -->
+          <div class="d-flex flex-row justify-content-start align-items-center">
+            <div class="btn-group upvote" id="upvote13">
+              <button type="button" class="btn btn-sm btn-outline-secondary">
+                <i class="fa fa-arrow-up"></i>
+              </button>
+            </div>
+            <div class="ml-2 mr-2">
+              <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count13">40</small></p>
+            </div>
+            <div class="btn-group downvote" id="downvote13">
+              <button type="button" class="btn btn-sm btn-outline-secondary">
+                <i class="fa fa-arrow-down"></i>
+              </button>
+            </div>
+
+          </div>
+          </div>
+        </div>
+
 
 
 
