--- a/post13.html
+++ b/post13.html
@@ -48,7 +48,7 @@
 
               <div class="card mb-4">
                   <div class="card-body">
-                  <p class="date">25/05/2023</p>
+                  <p class="date">20/05/2023</p>
                   <h5 id="post-title" class="card-title">How to install Python in Windows?</h5>
                   <p id="post-content" class="card-text">
                     PythonServer Side ProgrammingProgramming<br>
@@ -114,7 +114,7 @@
                     We have successfully installed python and pip on our Windows system.<br>
                     <br>
                     </p>
-                  <p class="card-text"><small class="text-muted">Submitted by John Doe on 2023-05-25</small></p>
+                  <p class="card-text"><small class="text-muted">Submitted by John Doe on 2023-05-20</small></p>
 
                   <!-- Button Bar -->
                   <div class="d-flex flex-row justify-content-start align-items-center">
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="ml-2 mr-2">
-                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count5">0</small><small class="text-muted"> votes</small></p>
+                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted" id="vote-count5">45</small><small class="text-muted"> votes</small></p>
                     </div>
 
                     <div class="btn-group" id="downvote1">
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="ml-2 mr-2">
-                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted">4 comments</small></p>
+                      <p class="mb-0 font-weight-bold text-center"><small class="text-muted">15 comments</small></p>
                     </div>
 
                     <div class="btn-group">
@@ -161,10 +161,21 @@
             <div class="card mb-4">
               <div class="card-body">
               <h5 class="card-title">Comments</h5>
-              <p class="card-text"><small class="text-muted">Gabriel J: </small>Muito bem feito<small class="text-muted"> 2023-05-25</small></p>
-              <p class="card-text"><small class="text-muted">Bot123: </small>Comentario genérico<small class="text-muted"> 2023-05-25</small></p>
-              <p class="card-text"><small class="text-muted">Pedro Santos: </small>Achei o tutorial útil<small class="text-muted"> 2023-05-25</small></p>
-              <p class="card-text"><small class="text-muted">User94: </small>Já vi pior<small class="text-muted"> 2023-05-25</small></p>
+              <p class="card-text"><small class="text-muted">Jennifer Adams:</small> Wow, this tutorial is amazing! I never thought I could grasp the concept so easily. <small class="text-muted">2023-05-25</small></p>
+                <p class="card-text"><small class="text-muted">John Smith:</small> I can't thank the creator of this tutorial enough. It's a game-changer for me. <small class="text-muted">2023-05-25</small></p>
+                <p class="card-text"><small class="text-muted">Sarah Thompson:</small> This tutorial is a gem! It explains everything with such clarity. I'm truly impressed. <small class="text-muted">2023-05-25</small></p>
+                <p class="card-text"><small class="text-muted">David Martinez:</small> I'm blown away by the quality of this tutorial. It's definitely one of the best I've come across. <small class="text-muted">2023-05-25</small></p>
+                <p class="card-text"><small class="text-muted">Emily Wilson:</small> This tutorial deserves all the praise. It's well-structured and easy to follow. <small class="text-muted">2023-05-25</small></p>
+                <p class="card-text"><small class="text-muted">Robert Turner:</small> I was struggling with this topic, but this tutorial cleared all my doubts. Thank you so much! <small class="text-muted">2023-05-25</small></p>
+                <p class="card-text"><small class="text-muted">Amy Foster:</small> This tutorial is a lifesaver! It saved me hours of searching for information. Highly recommend it. <small class="text-muted">2023-05-25</small></p>
+                <p class="card-text"><small class="text-muted">Daniel Harris:</small> As a beginner, I found this tutorial incredibly helpful. It's comprehensive yet beginner-friendly. <small class="text-muted">2023-05-25</small></p>
+                <p class="card-text"><small class="text-muted">Olivia Walker:</small> This tutorial exceeded my expectations. It's concise, informative, and engaging. Thumbs up! <small class="text-muted">2023-05-25</small></p>
+                <p class="card-text"><small class="text-muted">Michael Johnson: </small>This tutorial is fantastic! It helped me understand the topic thoroughly.<small class="text-muted"> 2023-05-18</small></p>
+                <p class="card-text"><small class="text-muted">Emily Roberts: </small>Clear and concise tutorial. I was able to follow along with ease.<small class="text-muted"> 2023-05-14</small></p>
+                <p class="card-text"><small class="text-muted">David Thompson: </small>Thanks for sharing this tutorial. It saved me a lot of time and frustration.<small class="text-muted"> 2023-05-09</small></p>
+                <p class="card-text"><small class="text-muted">Sophia Davis: </small>Great job with this tutorial! It's well-structured and beginner-friendly.<small class="text-muted"> 2023-05-04</small></p>
+                <p class="card-text"><small class="text-muted">Oliver Wilson: </small>Excellent explanation! This tutorial helped me overcome a major hurdle in my project.<small class="text-muted"> 2023-04-29</small></p>
+                <p class="card-text"><small class="text-muted">Emma Anderson: </small>Very informative tutorial. It provided a solid foundation for further learning.<small class="text-muted"> 2023-03-04</small></p>
               </div>
             </div>
             
@@ -184,12 +195,7 @@
                   </select>
                 </div>
                 <ul id="history-list">
-                  <li>04/04/2023 <small class="text-muted">Version 6</small></li> 
-                  <li>28/03/2023 <small class="text-muted">Version 5</small></li> 
-                  <li>14/03/2023 <small class="text-muted">Version 4</small></li>
-                  <li>25/02/2023 <small class="text-muted">Version 3</small></li>
-                  <li>22/02/2023 <small class="text-muted">Version 2</small></li>
-                  <li>03/02/2023 <small class="text-muted">Version 1</small></li>
+                  <li>20/05/2023 <small class="text-muted">Version 1</small></li>
                 </ul>
               </div>
             </div>
